added messages and export data functions

--- a/outdeed/templates/base.html
+++ b/outdeed/templates/base.html
@@ -39,11 +39,13 @@
                 <a class="nav-link" href="{% url 'seeker.apply' %}">Apply</a>
                 <a class="nav-link" href="{% url 'seeker.status' %}">Status</a>
                 <a class="nav-link" href="{% url 'seeker.settings' %}">Settings</a>
+                <a class="nav-link" href="{% url 'recruiter.messages' %}">Messages</a>
               {% elif user.profile and user.profile.role == 'RECRUITER' %}
                 <a class="nav-link" href="{% url 'jobs.index' %}">Post A Job</a>
                 <a class="nav-link" href="{% url 'recruiter.messages' %}">Messages</a>
                 <a class="nav-link" href="{% url 'recruiter.find_candidates' %}">Find Candidates</a>
               {% elif user.profile and user.profile.role == 'ADMIN' %}
+                <a class="nav-link" href="{% url 'admin.export' %}">Export Data</a>
                 <a class="nav-link" href="{% url 'admin.edit_posts' %}">Edit Posts</a>
                 <a class="nav-link" href="{% url 'admin.manage_users' %}">Manage Users</a>
               {% endif %}
